# PRO-TIP-Automatic-Ultrasound-Calibration

ConeCalibrationPlugin/: CMakeLists.txt  ConeCalibrationAlgorithm.cpp  ConeCalibrationAlgorithm.h
